8189111: Cannot build JavaFX modules with boot JDK that does not already include them
Reviewed-by: prr